# eva

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
db/migrations/: 001_init.sql
docs/: GEO_TEMPORAL_CONTEXT_CORE.md  MAINTAINER_GUIDE.md  OPENCLAW_ORIGIN.md  PRIVACY_MODEL.md  START_FROM_ZERO.md  THREAT_MODEL.md
examples/: synthetic_context_packet.json  synthetic_event.json
schemas/: context-packet.schema.json  event.schema.json
scripts/: ingest_synthetic.py  query_events.py
tests/: test_context_packet_schema.py  test_event_schema.py  test_ingest_event.py  test_migration.py  test_query_events.py
